--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -566,6 +566,10 @@
           filter: grayscale(100%);
 }
 
+.links-color-green-light a {
+  color: #2CBF88;
+}
+
 .custom-link {
   font-size: 14px;
   font-family: "Nunito", sans-serif;
@@ -1092,6 +1096,59 @@
   border-bottom: 1px solid #2CBF88;
 }
 
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  background-color: white;
+}
+
+.loading img {
+  width: 130px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+  -webkit-animation: loading 2s infinite;
+          animation: loading 2s infinite;
+  -webkit-transform-origin: center;
+          transform-origin: center;
+}
+
+@-webkit-keyframes loading {
+  0% {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+  }
+  50% {
+    -webkit-transform: translate(-50%, -50%) scale(1.2);
+            transform: translate(-50%, -50%) scale(1.2);
+  }
+  100% {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+@keyframes loading {
+  0% {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+  }
+  50% {
+    -webkit-transform: translate(-50%, -50%) scale(1.2);
+            transform: translate(-50%, -50%) scale(1.2);
+  }
+  100% {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+  }
+}
+
 body {
   font-family: "Nunito", sans-serif;
   padding-top: 100px;
@@ -1396,6 +1453,10 @@ body {
 
 .btn:hover {
   background-color: #005A66 !important;
+}
+
+a.btn-primary {
+  line-height: 34px;
 }
 
 .block-pricing {
