--- a/Frontend/sass/_general.scss
+++ b/Frontend/sass/_general.scss
@@ -531,7 +531,11 @@ sans-serif;
 .grayscale{
   filter: grayscale(100%);
 }
-
+.links-color-green-light{
+  a{
+    color: $green-light;
+  }
+}
 .custom-link {
   font-size: 14px;
   font-family: $font;
@@ -1016,4 +1020,28 @@ sans-serif;
     padding-bottom: 2px;
     border-bottom: 1px solid $green-light;
   }
+}
+
+.loading{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  background-color: white;
+  img{
+    width: 130px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(1);
+    animation: loading 2s infinite;
+    transform-origin: center;
+  }
+}
+@keyframes loading {
+  0% {transform: translate(-50%,-50%) scale(1);}
+  50% {transform: translate(-50%,-50%) scale(1.2);}
+  100% {transform: translate(-50%,-50%) scale(1);}
 }
